fix: Prevent todo from overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import "reset.css";
 @import "background.css";
 @import "status-bar.css";
@@ -10,6 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .hidden {
